@@ -1,6 +1,6 @@
 Package: Peptides
-Version: 1.0.2
-Date: 2014-11-18
+Version: 1.0.3
+Date: 2014-12-14
 Title: Calculate Indices and Theoretical Properties of Protein
         Sequences
 Author: Daniel Osorio, Paola Rondon-Villarreal and Rodrigo Torres.
@@ -9,7 +9,7 @@ URL: https://github.com/dosorio/Peptides/
 Suggests: RUnit
 Description: Calculate physicochemical properties and indices from amino-acid sequences of peptides and proteins. Include also the option to read and plot XVG output files from GROMACS molecular dynamics package.
 License: GPL-2
-Packaged: 2014-11-18 22:21:31 UTC; Daniel
+Packaged: 2014-12-15 04:22:36 UTC; Daniel
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-11-19 02:01:08
+Date/Publication: 2014-12-15 07:23:11
