@@ -1,23 +1,23 @@
-045cd77868bf8e979c3dba51fdb22e18 *DESCRIPTION
+75319997cca5d9679cf219913a413bb8 *DESCRIPTION
 8b54e5a89fbda3af5e077053d40bec76 *NAMESPACE
-803e3959baf10a7e747bf1f96094f57d *NEWS
-025ce195fce3b039e66f6d77669f3e2e *R/aacomp.R
+c580a53a254234c7ebfad12edeff8570 *NEWS
+025ce195fce3b039e66f6d77669f3e2e *R/AAcomp.R
+41985c786ec786ac8c807832de4332db *R/Boman.R
+0f9039fdf8519caf93418dcc8adafefa *R/MW.R
 d9ef5d054e27adfbd22deb331cee8b19 *R/aindex.R
-41985c786ec786ac8c807832de4332db *R/boman.R
 821f0b7174334033b811d5a6ac6c6af0 *R/charge.R
-a6e95f7731daaf31111fa550fd552813 *R/hmoment.R
+b10a18beab914220a8797123901a8bd6 *R/hmoment.R
 bb03438bb583132a77f6e983e58821bc *R/hydrophobicity.R
 9dbc5915991bc6d7a13903bbd453b467 *R/instaindex.R
 d01123601c13d7122ed8b30297bc5e80 *R/lengthpep.R
-40438e55b4eaadd155f08f72138c594b *R/membpos.R
-0f9039fdf8519caf93418dcc8adafefa *R/mw.R
+c527dc4d655b3347e6c65f74e2d85b57 *R/membpos.R
 2834e4e819bec987983bb2b1616be8ad *R/pI.R
 d542b6713bb074d7e9af4f05adc2a15b *R/plot.xvg.R
 92224fb486563bd98be094e64d7de3f1 *R/read.xvg.R
 872fdf7b1e7790d43d81b92a659b3f55 *data/H.RData
 53f5f60143f60dfc3aae68bbba3780f1 *data/datalist
 91fccec7d18101437c13c194ab46b7f6 *data/pKscales.RData
-49ec1ee9cf7fb70fda84b4b3cebae727 *data/pepdata.RData
+ebe05569058ca8f73e875df8325e072d *data/pepdata.RData
 a620ddd9496a48530d6dc9b64ffe9cdc *inst/tests/runalltest.R
 b77b4b8246080a21e6001ffb3e1a5215 *inst/tests/runit.aacomp.R
 8ec60aa534446caa10f61893d3a101f9 *inst/tests/runit.aindex.R
@@ -33,9 +33,12 @@ bdbc8ed908ba1428a57ddf6073b5c5ea *inst/tests/runit.mw.R
 9cc5457350e649f19aca60689b379f31 *inst/xvg-files/POPE.xvg
 099bbd512044524791c66106256617c2 *inst/xvg-files/POPG.xvg
 ae5ed083b17c6c5f9ad089017ffe8e24 *inst/xvg-files/epot.xvg
-c6a2b6ff9f0a7583e69fc3df652bda0f *man/aacomp.Rd
+c6a2b6ff9f0a7583e69fc3df652bda0f *man/AAcomp.Rd
+acf9d11ece3ffadab3755a37b35ec7b5 *man/Boman.Rd
+df361e348167f2adc9c90972e6a75e54 *man/MW.Rd
+ca2f796983de79f04b68d44e6d2bbc3c *man/Pepdata.Rd
+a1713243653e273d600351b72b929ad4 *man/Peptides-package.Rd
 abf85db4e18a2f3050f6a55829bfe202 *man/aindex.Rd
-acf9d11ece3ffadab3755a37b35ec7b5 *man/boman.Rd
 e5622159b956d2db77cfd3a746158f18 *man/charge.Rd
 74343df2157bd3ccbe2ba5a8f2da094d *man/h.Rd
 c7b9477fa471a8b07691765df1f002d0 *man/hmoment.Rd
@@ -43,11 +46,8 @@ d8e1500a30e5c8b9fc0e62477458ccd4 *man/hydrophobicity.Rd
 ff9935c9ed490fcd948c372e99895ec6 *man/instaindex.Rd
 de9b2d33b95d03680b24fe60a3466155 *man/lengthpep.Rd
 a410535cd65c8eee506c6a6e8a469654 *man/membpos.Rd
-df361e348167f2adc9c90972e6a75e54 *man/mw.Rd
 1362bb17c29cef7ab5f61f67f27c3c6d *man/pI.Rd
 513d0db824a9607d670c45e320b782e4 *man/pKscales.Rd
-ca2f796983de79f04b68d44e6d2bbc3c *man/pepdata.Rd
-7885f3796c1e282a5959b8917afd434f *man/peptides-package.Rd
 2029a9fd7a6ccabb1506217d48edbba8 *man/plot.xvg.Rd
 01b16854c7ad858cd0ef4cffd3a1a4b7 *man/read.xvg.Rd
-8f2acbe3df46a936aebab4b96b682c82 *tests/doRUnit.R
+cd53b51359bffd8b559870088d7a6a11 *tests/doRUnit.R
