@@ -3,9 +3,9 @@
 
 ## unit tests will not be done if RUnit is not available
 if(require("RUnit", quietly=TRUE)) {
-    
+
     ## --- Setup ---
-    
+
     pkg <- "Peptides" # <-- Change to package name!
     if(Sys.getenv("RCMDCHECK") == "FALSE") {
         ## Path to unit tests for standalone running under Makefile (not R CMD check)
@@ -18,26 +18,26 @@ if(require("RUnit", quietly=TRUE)) {
     }
     cat("\nRunning unit tests\n")
     print(list(pkg=pkg, getwd=getwd(), pathToUnitTests=path))
-    
+
     library(package=pkg, character.only=TRUE)
-    
+
     ## If desired, load the name space to allow testing of private functions
     ## if (is.element(pkg, loadedNamespaces()))
     ##     attach(loadNamespace(pkg), name=paste("namespace", pkg, sep=":"), pos=3)
     ##
     ## or simply call PKG:::myPrivateFunction() in tests
-    
+
     ## --- Testing ---
-    
+
     ## Define tests
     testSuite <- defineTestSuite(name=paste(pkg, "unit testing"),
     dirs=path)
     ## Run
     tests <- runTestSuite(testSuite)
-    
+
     ## Default report name
     pathReport <- file.path(path, "report")
-    
+
     ## Report to stdout and text files
     cat("------------------- UNIT TEST SUMMARY ---------------------\n\n")
     printTextProtocol(tests, showDetails=FALSE)
@@ -45,10 +45,10 @@ if(require("RUnit", quietly=TRUE)) {
     fileName=paste(pathReport, "Summary.txt", sep=""))
     printTextProtocol(tests, showDetails=TRUE,
     fileName=paste(pathReport, ".txt", sep=""))
-    
+
     ## Report to HTML file
     printHTMLProtocol(tests, fileName=paste(pathReport, ".html", sep=""))
-    
+
     ## Return stop() to cause R CMD check stop in case of
     ##  - failures i.e. FALSE to unit tests or
     ##  - errors i.e. R errors
